; ModuleID = '/home/carl/AnghaBench/libgit2/examples/extr_add.c_print_matched_cb.c'
source_filename = "/home/carl/AnghaBench/libgit2/examples/extr_add.c_print_matched_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.print_payload = type { i32, i32 }

@GIT_STATUS_WT_MODIFIED = common dso_local global i32 0, align 4
@GIT_STATUS_WT_NEW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"add '%s'\0A\00", align 1
@SKIP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @print_matched_cb(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.print_payload, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = bitcast i8* %11 to %struct.print_payload*
  %13 = bitcast %struct.print_payload* %8 to i8*
  %14 = bitcast %struct.print_payload* %12 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %13, i8* align 4 %14, i64 8, i1 false)
  %15 = load i8*, i8** %6, align 8
  %16 = getelementptr inbounds %struct.print_payload, %struct.print_payload* %8, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = call i64 @git_status_file(i32* %10, i32 %17, i8* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %45

22:                                               ; preds = %3
  %23 = load i32, i32* %10, align 4
  %24 = load i32, i32* @GIT_STATUS_WT_MODIFIED, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %32, label %27

27:                                               ; preds = %22
  %28 = load i32, i32* %10, align 4
  %29 = load i32, i32* @GIT_STATUS_WT_NEW, align 4
  %30 = and i32 %28, %29
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %27, %22
  %33 = load i8*, i8** %5, align 8
  %34 = call i32 @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8* %33)
  store i32 0, i32* %9, align 4
  br label %36

35:                                               ; preds = %27
  store i32 1, i32* %9, align 4
  br label %36

36:                                               ; preds = %35, %32
  %37 = getelementptr inbounds %struct.print_payload, %struct.print_payload* %8, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = load i32, i32* @SKIP, align 4
  %40 = and i32 %38, %39
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %36
  store i32 1, i32* %9, align 4
  br label %43

43:                                               ; preds = %42, %36
  %44 = load i32, i32* %9, align 4
  store i32 %44, i32* %4, align 4
  br label %45

45:                                               ; preds = %43, %21
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @git_status_file(i32*, i32, i8*) #2

declare dso_local i32 @printf(i8*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
